Analytics for estancia
